--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
-# Visual Studio
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Executables
+*.exe
+*.out
+*.app
+
+# Visual Studio artifacts
+Debug
 .vs
-*x64
-*.sln
-*.vcxproj*
+
+# CMake artifacts
+cmake
+CMakeFiles
+cmake_install.cmake
+CMakeCache.txt
+Makefile
+
+# Runtime artifacts
+Blackbird_testoutput.txt
+Blackbird_errors.txt
