--- a/src/blackbird.vcxproj.filters
+++ b/src/blackbird.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="StandardOutput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Raster.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Streamnode.h">
