--- a/src/blackbird.vcxproj.filters
+++ b/src/blackbird.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClCompile Include="ParseLib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ParsePreprocessedTables.cpp">
+    <ClCompile Include="_ParsePreprocessedTables.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CommonFunctions.cpp">
