--- a/src/blackbird.vcxproj.filters
+++ b/src/blackbird.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="Streamnode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BoundaryConditions.cpp">
+    <ClCompile Include="BoundaryCondition.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Model.cpp">
@@ -77,7 +77,7 @@
     <ClInclude Include="Reach.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BoundaryConditions.h">
+    <ClInclude Include="BoundaryCondition.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Model.h">
